--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  flutter_background_service: ^0.1.5
+  flutter_background_service: ^0.1.7
   flutter_phone_direct_caller: ^2.0.0
   flutter_slidable: ^0.6.0
   flutter_spinkit: ^5.1.0
@@ -57,11 +57,13 @@ dependencies:
   background_sms: ^0.0.4
   background_location: ^0.8.1
   workmanager: ^0.5.0
-  change_app_package_name: ^1.1.0
   firebase_performance: ^0.8.2+1
   get: ^4.6.5
-  hardware_buttons: ^1.0.0
   flutter_sound: ^9.2.13
+  audio_background_record :
+    path: ./plugins/audio_background_record
+  easy_folder_picker: ^1.2.1
+  duration_picker_dialog_box: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -81,12 +83,7 @@ flutter:
     - assets/images/
 
   fonts:
-    - family: Centra
+    - family: metaplusmedium
       fonts:
-        - asset: assets/fonts/CentraNo1-Bold.ttf
-          weight: 400
-    - family: Montserrat
-      fonts:
-        - asset: assets/fonts/Montserrat-Regular.ttf
-        - asset: assets/fonts/Montserrat-Light.ttf
-          weight: 400
+        - asset: assets/fonts/metaplusmedium.ttf
+
