--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  flutter_background_service: ^0.1.7
+  flutter_background_service:
+  flutter_local_notifications: ^9.9.1
   flutter_phone_direct_caller: ^2.0.0
   flutter_slidable: ^0.6.0
   flutter_spinkit: ^5.1.0
@@ -37,7 +38,8 @@ dependencies:
   google_fonts: ^2.1.0
   location: ^2.3.5
   lottie: ^1.2.1
-  permission_handler: ^8.1.6
+  #permission_handler: ^8.1.6
+  permission_handler:
   pinput: ^1.2.1
   shake: ^2.1.0
   shared_preferences: ^2.0.5
